--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,1 +1,6 @@
-
+<h1>Bincom Test Application</h1>
+<ul>
+  <li><a href="/polling-unit">View Polling Unit Results</a></li>
+  <li><a href="/lga">View LGA Total Results</a></li>
+  <li><a href="/results/add">Add New Results</a></li>
+</ul>
